# ios-apps

./: .gitignore
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  test_fixture.md
apps/nutriscan-ios/NutriScan/: CaptureSupport.swift  NutriScanAPI.swift  NutriScanApp.swift  RootView.swift  ScanModels.swift
apps/nutriscan-ios/NutriScan.xcodeproj/: project.pbxproj
apps/nutriscan-ios/NutriScan.xcodeproj/xcshareddata/xcschemes/: NutriScan.xcscheme
apps/whatsapp-self-forward/: PLAN.md  README.md
backend/nutriscan-api/: .env.example  README.md  pyproject.toml
backend/nutriscan-api/app/: main.py  parser.py  schemas.py
backend/nutriscan-api/tests/: test_api.py
backend/nutriscan-api/tests/fixtures/inbox/: README.md
backend/nutriscan-api/tests/fixtures/sg/: ingredients_allergens_warning.txt  nutrition_panel.txt  overlay-label-sticker-real-ocr.txt
backend/nutriscan-api/tests/fixtures/us/: allergy_concern_physical_label.txt  ingredients_concerns.txt  lays-real-ocr.txt  nutrition_with_added_sugar.txt
docs/plans/: branch-strategy.md  image-fixture-workflow.md  ingredient-concern-taxonomy.md  llm-assisted-ingredient-interpretation.md  nutriscan-decision-log.md  nutriscan-mvp-prd.md  nutriscan-technical-implementation-plan.md  nutriscan-working-build-checklist.md
tests/fixtures/label-images/inbox/: README.md
